# cosmos-cert-extractor

./: README.md  pyproject.toml
src/: cosmos-extractor.py
